js/js.translator/testData/incremental/invalidation/breakKlibBinaryCompatibilityWithVariance/lib1/l1.0.kt
interface GenericInterface<T>

interface TestInterface {
    fun <T> test(f: () -> GenericInterface<out T>) {}
}
